# ELFNet

./: .gitattributes  .gitignore  ARCHITECTURE.md  DATASET.md  DATA_RELEASES.md  LICENSE  MODEL_CARD.md  PROVENANCE.md  README.md  pyproject.toml
configs/: best_chinet.yaml  default.yaml
dataset/: elfnet_aab_sweep_stats.json
examples/poscars/: POSCAR_NdH9_F-43m_200_Au_Ga
release/dataset-v1/: RELEASE_NOTES.md  SHA256SUMS  SHA256SUMS.full  elfnet-aab-sweep-v1.tar.zst.part-000  elfnet-aab-sweep-v1.tar.zst.part-001  elfnet-aab-sweep-v1.tar.zst.part-002  elfnet-aab-sweep-v1.tar.zst.part-003  elfnet-aab-sweep-v1.tar.zst.part-004
release/dft-reference-elfs-75k-v1/: RELEASE_NOTES.md  SHA256SUMS  SHA256SUMS.full  archive-file-list.txt  dft-reference-elfs-75k-v1-manifest.tsv  dft-reference-elfs-75k-v1-stats.json  dft-reference-elfs-75k-v1.tar.zst.part-000  dft-reference-elfs-75k-v1.tar.zst.part-001  dft-reference-elfs-75k-v1.tar.zst.part-002
release/pressure-triplets-326k-v1/: RELEASE_NOTES.md  SHA256SUMS  SHA256SUMS.full  archive-file-list.txt  pressure-triplets-326k-v1-shard000.tar.zst.part-000  pressure-triplets-326k-v1-shard001.tar.zst.part-000  pressure-triplets-326k-v1-shard002.tar.zst.part-000  pressure-triplets-326k-v1-shard003.tar.zst.part-000  pressure-triplets-326k-v1-shard004.tar.zst.part-000  pressure-triplets-326k-v1-shard005.tar.zst.part-000  pressure-triplets-326k-v1-shard006.tar.zst.part-000  (+28 more)
scripts/: import_best_chinet_checkpoint.py
tests/: test_smoke.py
weights/: README.md  best_chinet_epoch0114.ckpt  elfnet.ckpt  elfnet_sad2elf.ckpt
(+89 files in other folders)
